--- a/Messages/messages.html
+++ b/Messages/messages.html
@@ -72,9 +72,9 @@
             <!-- Received Message -->
             <div class="received-chats">
               <div class="received-chats-img">
-                <img src="user2.png" alt="User 2">
+                <img src="/images/user2.png" alt="User 2" class="profile-pic">
               </div>
-              <div class="received-msg">
+              <div class="receiveds-msg">
                 <div class="received-msg-inbox">
                   <p>Hey! How's it going? Just wanted to check in :)</p>
                   <span class="time">Today 11:55</span>
@@ -85,7 +85,7 @@
             <!-- Sent Message -->
             <div class="outgoing-chats">
               <div class="outgoing-chats-img">
-                <img src="user1.png" alt="User 1">
+                <img src="/images/user1.png" alt="User 1" class="profile-pic">
               </div>
               <div class="outgoing-msg">
                 <div class="outgoing-chats-msg">
@@ -99,7 +99,7 @@
             <!-- Another Received Message -->
             <div class="received-chats">
               <div class="received-chats-img">
-                <img src="user2.png" alt="User 2">
+                <img src="/images/user2.png" alt="User 2" class="profile-pic">
               </div>
               <div class="received-msg">
                 <div class="received-msg-inbox">
