edited navbar to make consistent
editing nav bar to make consistent

--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -3,6 +3,8 @@
 <html lang="en">
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../beforeLoginHomePage/beforeLoginStyleSheet.css">
+    <link rel="stylesheet" href="../stylesheet.css">
     <link rel="stylesheet" href="../stylesheet.css">
     <link rel="stylesheet" href="profileStylesheet.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
