pfp in messaging

--- a/Messages/messages.html
+++ b/Messages/messages.html
@@ -59,9 +59,9 @@
       <!-- Header Section -->
       <div class="msg-header">
         <div class="container1">
-          <img src="../images/pfp.svg" alt="Profile Picture" class="msgimg">
+          <img src="/images/user2.png" alt="pfp" class="msgimg">
           <div class="active">
-            <p>User Name</p>
+            <p>Emily</p>
           </div>
         </div>
       </div>
