--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -17,7 +17,7 @@
         });
     </script>
     <div class="rectangle-container">
-        <img src="../images/bunny-profile.png" alt="Profile pic" class="bunny-image">
+        <img src="../images/bunnyprofile.jpg" alt="Profile pic" class="bunny-image">
         <div class="rectangle-content">
             <div class="text">
                 <h2 id="name" contenteditable="false">Judy Hopps</h2>
