matching works yayy

--- a/match/match.html
+++ b/match/match.html
@@ -25,7 +25,7 @@
         <!-- Profile section with ID for dynamic updates -->
         
         <!-- Differences Section -->
-        <div class="differences-section">
+        <div class="differences-section" id="differences-section">
             <h2>Differences</h2>
             <div class="attributes">
                 <!-- Attributes will be dynamically populated here -->
@@ -41,7 +41,7 @@
             <p></p>
         </div>
 
-        <div class="similarities-section">
+        <div class="similarities-section" id="similarities-section">
             <h2>Similarities</h2>
             <div class="attributes">
                 <!-- Attributes will be dynamically populated here -->
