--- a/match/match.html
+++ b/match/match.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../beforeLoginHomePage/beforeLoginStyleSheet.css">
     <link rel="stylesheet" href="../stylesheet.css">
     <link rel="stylesheet" href="../stylesheet.css">
