import profile syntax working

--- a/match/match.html
+++ b/match/match.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="match.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="../Users.js"></script>
-    <script src="match.js"></script>
+    <script type="module" src="match.js"></script>
 </head>
 <body>
     <div id="afterLogin-placeholder"></div>
