--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                 </div>
-                <button onclick="editProfile()" class="editButton">Edit</button>
+                <button onclick="editProfile" class="editButton">Edit</button>
                 <button onclick="saveProfile()" class="editButton">Save</button>
             </div>
         </div>
