--- a/Resources/resources.html
+++ b/Resources/resources.html
@@ -3,8 +3,10 @@
 <html lang="en">
 <head>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="../beforeLoginHomePage/beforeLoginStyleSheet.css">
+    <link rel="stylesheet" href="../stylesheet.css">
     <link href='https://fonts.googleapis.com/css?family=Manrope' rel='stylesheet'>
+    <link rel="stylesheet" href="resources.css">
     <style>
         body {
             font-family: 'Manrope';font-size: 22px;
@@ -27,10 +29,10 @@
         <br><br>
         <div>
             <div class="icon-description">
-                <img src="../images/resources_Self_care.png" alt="Self care icon" class="SeflCare-icon">
+                <img src="../images/resources_Self_care.png" alt="Self care icon" class="SelfCare-icon">
                 <div class="text">
                     <h2>Mental Health Support</h2>
-                    <p>Mental Health Resources: Find support, self-care tips, and trusted <br>services to help you prioritize your well-being.</p>
+                    <p>Mental Health Resources: Find support, self-care tips, and trusted services to help you prioritize your well-being.</p>
                 </div>
             </div>
             <br>
@@ -46,30 +48,33 @@
 
 <div class="organizations">
     <img src="../images/CMHA.svg" alt="guy with coffee" class="guy-coffee">
-    <b class="organization1"> Canadian Mental Health <br> Association</b>
-    <p class="org1text">
-        CMHA believes that good mental health is essential to overall health and well-being. Whether you are managing a mental illness, 
-        supporting someone you care about, or looking to build your own overall health, we can help you build mental health skills and 
-        resilience for yourself and your family.
-    </p>
-
-
     <img src="../images/UBC mental health.svg" alt="Coffee in hand" class="coffee-hand">
-    <b class="organization1"> UBC Gateway Health <br> Building</b>
-    <p class="org1text">
-        When students need help, there will be one convenient location to access a full range of services delivered by teams of health care
-         students and professionals from different disciplines - from the Wellbeing Centre, to Counselling Services, to Student Health Services 
-         where students can seek medical attention.
-    </p>
-
     <img src="../images/guy on shoulder.svg" alt="guy on shoulder" class="guy-shoulder">
-    <b class="organization1"> VGH and UBC Hospital <br> Foundation</b>
-    <p class="org1text">
-        VGH & UBC Hospital Foundation is Vancouver Coastal Health's primary philanthropic partner, raising funds for specialized adult health 
-        care services and research for all British Columbians.
-    </p>
+    <b class="organizationsNames">
+        <b class="orgOne"> Canadian Mental Health <br> Association</b> 
+        <b class="orgTwo"> UBC Gateway Health <br> Building</b>    
+        <b class="orgThree"> VGH and UBC Hospital <br> Foundation</b>
+    </b>
+    
+</div>
 
+<br>
+<br>
 
+<div class="section">
+    <h1> Articles </h1>
+</div>
+
+<div class="organizations"></div>
+    <img src="../images/CMHA.svg" alt="guy with coffee" class="guy-coffee">
+    <img src="../images/UBC mental health.svg" alt="Coffee in hand" class="coffee-hand">
+    <img src="../images/guy on shoulder.svg" alt="guy on shoulder" class="guy-shoulder">
+    <b class="organizationsNames">
+        <b class="articleOne"> The benefits of exercise for good <br> mental health.</b> 
+        <b class="articleTwo"> MENTAL HEALTH MATTERS.</b>    
+        <b class="articleThree"> The Mental Health <br> Benefits of Simple Acts of <br> Kindness </b>
+    </b>
+    
 </div>
 
 </body>
