--- a/navigationBars/afterLogin.html
+++ b/navigationBars/afterLogin.html
@@ -13,7 +13,7 @@
                 <li><a href="/Journal/journal.html">My Journal</a></li>
                 <li><a href="/Messages/messages.html">Messages</a></li>
                 <li><a href="/match/match.html">Match</a></li>
-                <li><a href="/resources.html">Resources</a></li>
+                <li><a href="/Resources/resources.html">Resources</a></li>
                 <li><a href="/Profile/profile.html">Profile</a></li>
             </ul>
         </nav>
