--- a/Resources/resources.html
+++ b/Resources/resources.html
@@ -66,15 +66,16 @@
 </div>
 
 <div class="organizations"></div>
-    <img src="../images/CMHA.svg" alt="guy with coffee" class="guy-coffee">
+    <a href="https://www.lifewithababy.com/blog/5855607?gad_source=1&gclid=Cj0KCQiA0MG5BhD1ARIsAEcZtwTH_nDMrTGWu-xn-UDWnxSoxg2VVYxaEo1Hfpt5oCj-kEGa7zU5UCcaAiITEALw_wcB" target="_blank">
+        <img src="../images/CMHA.svg" alt="guy with coffee" class="guy-coffee">
+    </a>
     <img src="../images/UBC mental health.svg" alt="Coffee in hand" class="coffee-hand">
     <img src="../images/guy on shoulder.svg" alt="guy on shoulder" class="guy-shoulder">
     <b class="organizationsNames">
         <b class="articleOne"> The benefits of exercise for good <br> mental health.</b> 
-        <b class="articleTwo"> MENTAL HEALTH MATTERS.</b>    
+        <b class="articleTwo"> MENTAL HEALTH MATTERS.</b>
         <b class="articleThree"> The Mental Health <br> Benefits of Simple Acts of <br> Kindness </b>
     </b>
-    
 </div>
 
 </body>
