very final push

--- a/Resources/resources.html
+++ b/Resources/resources.html
@@ -47,9 +47,16 @@
 </div>
 
 <div class="organizations">
-    <img src="../images/CMHA.svg" alt="guy with coffee" class="guy-coffee">
-    <img src="../images/UBC mental health.svg" alt="Coffee in hand" class="coffee-hand">
-    <img src="../images/guy on shoulder.svg" alt="guy on shoulder" class="guy-shoulder">
+    <a href="https://bc.cmha.ca/types-programs-services/wellness-programs/" target="_blank">
+        <img src="../images/CMHA.svg" alt="guy with coffee" class="guy-coffee">
+    </a>
+    <a href="https://give.ubc.ca/projects/integrated-student-health-wellbeing/?gad_source=1&gclid=Cj0KCQiA0MG5BhD1ARIsAEcZtwSYemd77VVbarXwwdJJfVi6tD1WL-EBGW3pVgieD3slBs7cjg6Sio4aAqsDEALw_wcB" target="_blank">
+        <img src="../images/UBC mental health.svg" alt="Coffee in hand" class="coffee-hand">
+    </a>
+
+    <a href="https://vghfoundation.ca/mental-health-support/" target="_blank">
+        <img src="../images/guy on shoulder.svg" alt="guy on shoulder" class="guy-shoulder">
+    </a>
     <b class="organizationsNames">
         <b class="orgOne"> Canadian Mental Health <br> Association</b> 
         <b class="orgTwo"> UBC Gateway Health <br> Building</b>    
@@ -69,8 +76,14 @@
     <a href="https://www.lifewithababy.com/blog/5855607?gad_source=1&gclid=Cj0KCQiA0MG5BhD1ARIsAEcZtwTH_nDMrTGWu-xn-UDWnxSoxg2VVYxaEo1Hfpt5oCj-kEGa7zU5UCcaAiITEALw_wcB" target="_blank">
         <img src="../images/CMHA.svg" alt="guy with coffee" class="guy-coffee">
     </a>
-    <img src="../images/UBC mental health.svg" alt="Coffee in hand" class="coffee-hand">
-    <img src="../images/guy on shoulder.svg" alt="guy on shoulder" class="guy-shoulder">
+
+    <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC2646471/" target="_blank">
+        <img src="../images/UBC mental health.svg" alt="Coffee in hand" class="coffee-hand">
+    </a>
+
+    <a href="https://www.psychiatry.org/news-room/apa-blogs/mental-health-benefits-simple-acts-of-kindness" target="_blank">
+        <img src="../images/guy on shoulder.svg" alt="guy on shoulder" class="guy-shoulder">
+    </a>
     <b class="organizationsNames">
         <b class="articleOne"> The benefits of exercise for good <br> mental health.</b> 
         <b class="articleTwo"> MENTAL HEALTH MATTERS.</b>
