--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        window.location.href = "beforeLoginHome.html";
+        window.location.href = "beforeLoginHomePage/beforeLoginHome.html";
     </script>
 </body>
 </html>
