forgot an l and added 2 dots?

--- a/navigationBars/afterLogin.html
+++ b/navigationBars/afterLogin.html
@@ -9,7 +9,7 @@
         <nav>
             <div class="logo"><b>Bunnies</b></div>
             <ul class="nav-links">
-                <li><a href="/afterLoginHomePage/afterLoginHome.htm">Home</a></li>
+                <li><a href="/afterLoginHomePage/afterLoginHome.html">Home</a></li>
                 <li><a href="/Journal/journal.html">My Journal</a></li>
                 <li><a href="/Messages/messages.html">Messages</a></li>
                 <li><a href="/match/match.html">Match</a></li>
