--- a/afterLoginHomePage/afterLoginHome.htm
+++ b/afterLoginHomePage/afterLoginHome.htm
@@ -18,7 +18,7 @@ body {
     <div id="afterLogin-placeholder"></div>
     <script>
         $(document).ready(function() {
-            $("#afterLogin-placeholder").load("/navigationBars/afterLogin.html");
+            $("#afterLogin-placeholder").load("../navigationBars/afterLogin.html");
         });
     </script>
 </body>
