--- a/Login/login.html
+++ b/Login/login.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="form-container">
-        <form action="../afterLoginHomePage/afterLoginHome.htm" method="GET">   
+        <form action="../afterLoginHomePage/afterLoginHome.html" method="GET">   
             <img src="../images/LoginBunny.svg" alt="Login Bunny" class="login-bunny-image">
             <h1>Login</h1>
             <label for="username">Username:</label>
