changing file location?

--- a/Messages/messages.html
+++ b/Messages/messages.html
@@ -15,7 +15,7 @@
   <div id="afterLogin-placeholder"></div>
   <script>
     $(document).ready(function () {
-      $("#afterLogin-placeholder").load("../navigationBars/afterLogin.html");
+      $("#afterLogin-placeholder").load("/afterLogin.html");
     });
   </script>
 
