--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -13,7 +13,7 @@
     <div id="afterLogin-placeholder"></div>
     <script>
         $(document).ready(function() {
-            $("#afterLogin-placeholder").load("../navigationBars/afterLogin.html");
+            $("#afterLogin-placeholder").load("/afterLogin.html");
         });
     </script>
     <div class="rectangle-container">
