--- a/Resources/resources.html
+++ b/Resources/resources.html
@@ -18,7 +18,7 @@
     <div id="afterLogin-placeholder"></div>
     <script>
         $(document).ready(function() {
-            $("#afterLogin-placeholder").load("/afterLogin.html");
+            $("#afterLogin-placeholder").load("../afterLogin.html");
         });
     </script>
 </body>
