--- a/match/match.html
+++ b/match/match.html
@@ -14,7 +14,7 @@
     <div id="afterLogin-placeholder"></div>
     <script>
         $(document).ready(function() {
-            $("#afterLogin-placeholder").load("/afterLogin.html");
+            $("#afterLogin-placeholder").load("../afterLogin.html");
         });
     </script>
     <div class="match-main">
