new method of changing the nav bar

--- a/afterLoginHomePage/afterLoginHome.html
+++ b/afterLoginHomePage/afterLoginHome.html
@@ -14,14 +14,26 @@ body {
 }
 </style>
 </head>
-<body>
+<!-- <body>
     <div id="afterLogin-placeholder"></div>
     <script>
         $(document).ready(function() {
             $("#afterLogin-placeholder").load("../afterLogin.html");
         });
     </script>
-</body>
+</body> -->
+<nav>
+    <div class="logo"><b>Bunnies</b></div>
+    <ul class="nav-links">
+        <li><a href="../afterLoginHomePage/afterLoginHome.html">Home</a></li>
+        <li><a href="../Journal/journal.html">My Journal</a></li>
+        <li><a href="../Messages/messages.html">Messages</a></li>
+        <li><a href="../match/match.html">Match</a></li>
+        <li><a href="../Resources/resources.html">Resources</a></li>
+        <li><a href="../Profile/profile.html">Profile</a></li>
+    </ul>
+</nav>
+
 <!-- This is our home page -->
 <!-- Seen after logging in-->
 
