--- a/match/match.html
+++ b/match/match.html
@@ -12,11 +12,25 @@
 </head>
 <body>
     <div id="afterLogin-placeholder"></div>
-    <script>
+    <!-- <script>
         $(document).ready(function() {
             $("#afterLogin-placeholder").load("../../afterLogin.html");
         });
-    </script>
+    </script> -->
+
+
+    <nav>
+        <div class="logo"><b>Bunnies</b></div>
+        <ul class="nav-links">
+            <li><a href="../afterLoginHomePage/afterLoginHome.html">Home</a></li>
+            <li><a href="../Journal/journal.html">My Journal</a></li>
+            <li><a href="../Messages/messages.html">Messages</a></li>
+            <li><a href="../match/match.html">Match</a></li>
+            <li><a href="../Resources/resources.html">Resources</a></li>
+            <li><a href="../Profile/profile.html">Profile</a></li>
+        </ul>
+    </nav>
+
     <div class="match-main">
         <h1>Find Your Buddy</h1>
     </div>
