--- a/afterLogin.html
+++ b/afterLogin.html
@@ -9,12 +9,12 @@
         <nav>
             <div class="logo"><b>Bunnies</b></div>
             <ul class="nav-links">
-                <li><a href="/afterLoginHomePage/afterLoginHome.html">Home</a></li>
-                <li><a href="/Journal/journal.html">My Journal</a></li>
-                <li><a href="/Messages/messages.html">Messages</a></li>
-                <li><a href="/match/match.html">Match</a></li>
-                <li><a href="/Resources/resources.html">Resources</a></li>
-                <li><a href="/Profile/profile.html">Profile</a></li>
+                <li><a href="afterLoginHomePage/afterLoginHome.html">Home</a></li>
+                <li><a href="Journal/journal.html">My Journal</a></li>
+                <li><a href="Messages/messages.html">Messages</a></li>
+                <li><a href="match/match.html">Match</a></li>
+                <li><a href="Resources/resources.html">Resources</a></li>
+                <li><a href="Profile/profile.html">Profile</a></li>
             </ul>
         </nav>
     </header>
